# bitserv

./: .env.example  .gitignore  Cargo.toml  README.md  setupenv.md
btc-scripts/: generate.sh  generate_btcd.sh  get_new_address.sh  run_electrum.sh  send.sh  start_btcd.sh  stop_btcd.sh
src/: lib.rs  main.rs
src/api/: mod.rs
src/config/: constants.rs
src/pubsub/: mod.rs
src/wallet/: bitserv.rs  client.rs  mnemonic.rs  mod.rs
tests/: pubsub.rs  wallet.rs
