[package]
name = "bitserv"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_wallet = { version = "1.0.0", features = ["keys-bip39", "rusqlite"] }
bdk_bitcoind_rpc = { version = "0.17.1" }
bdk_electrum = { version = "0.20.1" }
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
argon2 = "0.5.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
sha2 = "0.10"
hex = "0.4"
axum = { version = "0.7", features = ["json"] }
zmq = "0.10"
dotenv = "0.15"
config = { version = "0.13", features = ["toml"] }
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "sync"] }